--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,8 @@
 
-spring.datasource.url = jdbc:mysql://localhost:3306/db_product
-spring.datasource.username = root
-spring.datasource.password =
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = create
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-#spring.security.user.name=user
-#spring.security.user.password=12345
+#spring.datasource.url = jdbc:mysql://localhost:3306/db_product
+#spring.datasource.username = root
+#spring.datasource.password =
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.show-sql = true
+#spring.jpa.hibernate.ddl-auto = create
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
